applied css styles to create rough buttons

--- a/index.html
+++ b/index.html
@@ -18,24 +18,24 @@
 
 
     <!-- Current Calculation Display -->
-    <div>
+    <div class="current_display">
         <p>display current calculation</p>
     </div>
 
     <!-- First Row -->
-    <div>
+    <div class="row_1">
         <!-- clear the memory -->
-        <div>MC</div>
+        <div class="row_1">MC</div>
 
         <!-- store a number and recall it when you need it -->
         <!-- recall the contents of the memory and display on screen -->
-        <div>MR</div>
+        <div class="row_1">MR</div>
 
         <!-- use the number stored to subtract from current number -->
-        <div>M-</div>
+        <div class="row_1">M-</div>
 
         <!-- use the number stored to add to your current number -->
-        <div>M+/div>
+        <div class="row_1">M+/div>
 
 
     </div>
