centered calculator and created 2nd row buttons

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
     <link rel="stylesheet" href="css/styles.css">
+    <script src="https://kit.fontawesome.com/4e1129b10f.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -16,29 +17,42 @@
     <!-- create specialty functions to calculate: mortgage, interest rate, recipe costing,
     and use icons as display -->
 
-
-    <!-- Current Calculation Display -->
-    <div class="current_display">
-        <p>display current calculation</p>
-    </div>
-
-    <!-- First Row -->
+    <!-- Row 1 with display -->
+    <p>display</p>
     <div class="row_1">
-        <!-- clear the memory -->
-        <div class="row_1">MC</div>
-
-        <!-- store a number and recall it when you need it -->
-        <!-- recall the contents of the memory and display on screen -->
-        <div class="row_1">MR</div>
-
-        <!-- use the number stored to subtract from current number -->
-        <div class="row_1">M-</div>
-
-        <!-- use the number stored to add to your current number -->
-        <div class="row_1">M+/div>
-
-
+        <div class="button">
+            MC
+        </div><div class="button">
+            MR
+        </div><div class="button">
+            M-
+        </div><div class="button">
+            M+
+        </div><div class="button">
+            C
+        </div>
     </div>
-    
+
+    <!-- Row 2  -->
+    <div class="row_2">
+        <div class="button">
+            %
+        </div><div class="button">
+            7
+        </div><div class="button">
+            8
+        </div><div class="button">
+            9
+        </div><div class="button">
+            <i class="fa-sharp fa-solid fa-divide"></i>
+        </div>
+    </div>
+
+
+
+
+
+
+
 </body>
 </html>
