--- a/index.html
+++ b/index.html
@@ -48,7 +48,20 @@
         </div>
     </div>
 
-
+    <!-- Row 3 -->
+    <div class="row_3">
+        <div class="button">
+            <i class="fa-sharp fa-solid fa-plus-minus"></i>
+        </div><div class="button">
+            4
+        </div><div class="button">
+            5
+        </div><div class="button">
+            6
+        </div><div class="button">
+            <i class="fa-solid fa-xmark"></i>
+        </div>
+    </div>
 
 
 
