--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
-    
+
     <!-- Styles  -->
     <link rel="stylesheet" href="css/styles.css">
     <script src="https://kit.fontawesome.com/4e1129b10f.js" crossorigin="anonymous"></script>
@@ -36,7 +36,7 @@
             <td> <input type="button" value="8" onclick="" /> </td>
             <td> <input type="button" value="9" onclick="" /> </td>
             <td> 
-                <i class="fa fa-regular fa-divide"></i>
+                <i class="fa fa-solid fa-divide"></i>
                 <input type="button" value="" onclick="" /> 
             </td>
         </tr>
