multiply button done

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
         <!-- Row 2  -->
         <tr>
             <td> <input type="button" value="%" onclick="" /> </td>
-            <td> <input type="button" value="7" onclick="display ('7')" /> </td>
-            <td> <input type="button" value="8" onclick="" /> </td>
-            <td> <input type="button" value="9" onclick="" /> </td>
+            <td> <input type="button" value="7" onclick="display('7')" /> </td>
+            <td> <input type="button" value="8" onclick="display('8')" /> </td>
+            <td> <input type="button" value="9" onclick="display('9')" /> </td>
             <td> 
                 <i class="divide fa-solid fa-divide"></i>
                 <input type="button" value="" onclick="" /> 
@@ -47,11 +47,12 @@
                 <i class="plus_minus fa-sharp fa-solid fa-plus-minus"></i>
                 <input type="button" value="" onclick="" /> 
             </td>
-            <td> <input type="button" value="4" onclick="display ('7')" /> </td>
-            <td> <input type="button" value="5" onclick="display ('7')" /> </td>
-            <td> <input type="button" value="6" onclick="display ('7')" /> </td>
+            <td> <input type="button" value="4" onclick="display('4')" /> </td>
+            <td> <input type="button" value="5" onclick="display('5')" /> </td>
+            <td> <input type="button" value="6" onclick="display('6')" /> </td>
             <td>
-                <i class="fa-solid fa-xmark"></i>
+                <i class="multiply fa-solid fa-xmark"></i>
+                <input type="button" value="" onclick="" />
             </td>
         </tr>
     </table>
