reduced size of icons

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <td> <input type="button" value="8" onclick="display('8')" /> </td>
             <td> <input type="button" value="9" onclick="display('9')" /> </td>
             <td> 
-                <i class="divide fa-solid fa-divide"></i>
+                <i class="divide fa-solid fa-divide fa-xs"></i>
                 <input type="button" value="" onclick="calculate()" /> 
             </td>
         </tr>
@@ -50,14 +50,14 @@
         <!-- Row 3 -->
         <tr>
             <td>
-                <i class="plus_minus fa-sharp fa-solid fa-plus-minus"></i>
+                <i class="plus_minus fa-sharp fa-solid fa-plus-minus fa-xs"></i>
                 <input type="button" value="" onclick="calculate()" /> 
             </td>
             <td> <input type="button" value="4" onclick="display('4')" /> </td>
             <td> <input type="button" value="5" onclick="display('5')" /> </td>
             <td> <input type="button" value="6" onclick="display('6')" /> </td>
             <td>
-                <i class="multiply fa-solid fa-xmark"></i>
+                <i class="multiply fa-solid fa-xmark fa-xs"></i>
                 <input type="button" value="" onclick="calculate()" />
             </td>
         </tr>
@@ -72,7 +72,7 @@
             <td> <input type="button" value="2" onclick="display('2')" /> </td>
             <td> <input type="button" value="3" onclick="display('3')" /> </td>
             <td>
-                <i class="minus fa-solid fa-minus"></i>
+                <i class="minus fa-solid fa-minus fa-xs"></i>
                 <input type="button" value="" onclick="calculate()" />
             </td>
         </tr>
@@ -84,7 +84,7 @@
             <td> <input type="button" value="." onclick="display('.')" /> </td>
             <td> <input type="button" value="=" onclick="calculate()" /> </td>
             <td>
-                <i class="plus fa-solid fa-plus"></i>
+                <i class="plus fa-solid fa-plus fa-xs"></i>
                 <input type="button" value="" onclick="calculate()" />
             </td>
         </tr>
