closed gap between first and second column

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- create specialty functions to calculate: mortgage, fahrenheit to celcius, lb to kg,
     and use icons as display -->
 
-    <table class="calculator">
+    <table class="calculator" cellspacing="0">
         <!-- Display  -->
         <tr>
             <td> <input type="text" class="display" /> </td>
