buttons moved back and gap remains between first and second column

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <td> <input type="button" value="lb / kg" onclick="calculate()" /> </td>
             <td>
                 <!-- <i class="fa-solid fa-house"></i> -->
-                <input type="button" value="" onclick="calculate()" />
+                <!-- <input type="button" value="" onclick="" /> -->
             </td>
         </tr>
 
