--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <!-- Row 4 -->
         <tr>
             <td>
-                <i class="fa-solid fa-square-root"></i>
+                <img class="square_root" src="images/square_root.png" alt="square root icon" height="30" width="30">
                 <input type="button" value="" onclick="calculate()" id="square_root"/>
             </td>
             <td> <input type="button" value="1" onclick="display('1')" /> </td>
@@ -82,7 +82,7 @@
             <td> <input type="button" value="AC" onclick="clearScreen()" id="ac"/> </td>
             <td> <input type="button" value="0" onclick="display('0')" /> </td>
             <td> <input type="button" value="." onclick="display('.')" style="font-weight: bold;" /> </td>
-            <td> <input type="button" value="=" onclick="calculate()" style="font-size: small; font-weight: bold;"/> </td>
+            <td> <input type="button" value="=" onclick="calculate()" style="font-size: medium; font-weight: bold;"/> </td>
             <td>
                 <i class="plus fa-solid fa-plus fa-xs"></i>
                 <input type="button" value="" onclick="calculate()" />
@@ -99,7 +99,7 @@
                 <i class="temperature fa-solid fa-temperature-low"></i>
                 <input type="button" value="" onclick="calculate()" />
             </td>
-            <td> <input type="button" value="lb / kg" onclick="calculate()" /> </td>
+            <td> <input type="button" value="lb/kg" onclick="calculate()" /> </td>
             <td>
                 <!-- <i class="fa-solid fa-house"></i> -->
                 <!-- <input type="button" value="" onclick="" /> -->
