--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
     <!-- Styles  -->
     <link rel="stylesheet" href="css/styles.css">
     <script src="https://kit.fontawesome.com/4e1129b10f.js" crossorigin="anonymous"></script>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/js/all.js" integrity="sha256-2JRzNxMJiS0aHOJjG+liqsEOuBb6++9cY4dSOyiijX4=" crossorigin="anonymous"></script> -->
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"> -->
 </head>
 
 <body>
@@ -23,7 +21,7 @@
     <table class="calculator" cellspacing="0">
         <!-- Display  -->
         <tr>
-            <td> <input type="text" class="display" /> </td>
+            <td> <input type="text" class="display" id="result" disabled /> </td>
         </tr>
 
         <!-- Row 1 -->
@@ -105,8 +103,10 @@
                 <!-- <input type="button" value="" onclick="" /> -->
             </td>
         </tr>
-
-
+        
     </table>
+
+    <script type="text/javascript" src="script.js"></script>
+
 </body>
 </html>
