--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         
     </table>
 
-    <script type="text/javascript" src="script.js"></script>
+    <script type="text/javascript" src="js/script.js"></script>
 
 </body>
 </html>
