basic operator function buttons work and moved buttons around

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <table class="calculator" cellspacing="0">
         <!-- Display  -->
         <div class="output">
-            <div class="previous-operand"></div>
-            <div class="current-operand"></div>
+            <div data-previous-operand class="previous-operand"></div>
+            <div data-current-operand class="current-operand"></div>
         </div>
 
         <tr>
@@ -32,20 +32,20 @@
 
         <!-- Row 1 -->
         <tr>
-            <td> <input type="button" value="MC" onclick="" id="mc"/> </td>
-            <td> <input type="button" value="MR" onclick="" /> </td>
-            <td> <input type="button" value="M -" onclick="" /> </td>
-            <td> <input type="button" value="M +" onclick="" /> </td>
+            <td data-operation> <input type="button" value="MC" onclick="" id="mc"/> </td>
+            <td data-operation> <input type="button" value="MR" onclick="" /> </td>
+            <td data-operation> <input type="button" value="M -" onclick="" /> </td>
+            <td data-operation> <input type="button" value="M +" onclick="" /> </td>
             <td> <input type="button" value="C" onclick="clearScreen()" id="btn"/> </td>
         </tr>
 
         <!-- Row 2  -->
         <tr>
-            <td> <input type="button" value="%" onclick="" id="percent"/> </td>
-            <td> <input type="button" value="7" onclick="display('7')" /> </td>
-            <td> <input type="button" value="8" onclick="display('8')" /> </td>
-            <td> <input type="button" value="9" onclick="display('9')" /> </td>
-            <td> 
+            <td data-operation> <input type="button" value="%" onclick="" id="percent"/> </td>
+            <td data-number> <input type="button" value="7" onclick="display('7')" /> </td>
+            <td data-number> <input type="button" value="8" onclick="display('8')" /> </td>
+            <td data-number> <input type="button" value="9" onclick="display('9')" /> </td>
+            <td data-operation> 
                 <i class="divide fa-solid fa-divide fa-xs"></i>
                 <input type="button" value="" onclick="display('/')" data-operation /> 
             </td>
@@ -53,57 +53,59 @@
 
         <!-- Row 3 -->
         <tr>
-            <td>
+            <td data-operation>
                 <i class="plus_minus fa-sharp fa-solid fa-plus-minus fa-xs"></i>
                 <input type="button" value="" onclick="calculate()" id="plus_minus" data-operation/> 
             </td>
-            <td> <input type="button" value="4" onclick="display('4')" /> </td>
-            <td> <input type="button" value="5" onclick="display('5')" /> </td>
-            <td> <input type="button" value="6" onclick="display('6')" /> </td>
-            <td>
+            <td data-number> <input type="button" value="4" onclick="display('4')" /> </td>
+            <td data-number> <input type="button" value="5" onclick="display('5')" /> </td>
+            <td data-number> <input type="button" value="6" onclick="display('6')" /> </td>
+            <td data-operation>
                 <i class="multiply fa-solid fa-xmark fa-xs"></i>
-                <input type="button" value="" onclick="calculate()" data-operation />
+                <input type="button" value="" onclick="display('*')" data-operation />
             </td>
         </tr>
 
         <!-- Row 4 -->
         <tr>
-            <td>
+            <td data-operation>
                 <img class="square_root" src="images/square_root.png" alt="square root icon" height="30" width="30">
                 <input type="button" value="" onclick="calculate()" id="square_root"/>
             </td>
-            <td> <input type="button" value="1" onclick="display('1')" /> </td>
-            <td> <input type="button" value="2" onclick="display('2')" /> </td>
-            <td> <input type="button" value="3" onclick="display('3')" /> </td>
-            <td>
+            <td data-number> <input type="button" value="1" onclick="display('1')" /> </td>
+            <td data-number> <input type="button" value="2" onclick="display('2')" /> </td>
+            <td data-number> <input type="button" value="3" onclick="display('3')" /> </td>
+            <td data-operation>
                 <i class="minus fa-solid fa-minus fa-xs"></i>
-                <input type="button" value="" onclick="calculate()" data-operation />
+                <input type="button" value="" onclick="display('-')" data-operation />
             </td>
         </tr>
         
         <!-- Row 5 -->
         <tr>
-            <td> <input type="button" value="0" onclick="display('0')" /> </td>
             <td> <input type="button" value="." onclick="display('.')" style="font-weight: bold;" /> </td>
-            <td>
+            <td></td>
+            <td data-number> <input type="button" value="0" onclick="display('0')" /> </td>
+            <td></td>
+            <td data-operation>
                 <i class="plus fa-solid fa-plus fa-xs"></i>
-                <input type="button" value="" onclick="calculate()" />
+                <input type="button" value="" onclick="display('+')" />
             </td>
-            <td class="span-two"> <input type="button" value="=" onclick="calculate()" style="font-size: medium; font-weight: bold;"/> </td>
         </tr>
 
         <!-- Row 6 -->
         <tr>
-            <td>
+            <td data-operation>
                 <i class="mortgage fa-solid fa-house"></i>
                 <input type="button" value="" onclick="calculate()" id="mortgage"/>
             </td>
-            <td>
+            <td data-operation>
                 <i class="temperature fa-solid fa-temperature-low"></i>
                 <input type="button" value="" onclick="calculate()" />
             </td>
-            <td> <input type="button" value="lb/kg" onclick="calculate()" /> </td>
+            <td data-operation> <input type="button" value="lb/kg" onclick="calculate()" /> </td>
             <td class="span-two"> <input type="button" value="AC" onclick="clearScreen()" id="ac"/> </td>
+            <td class="span-two"> <input type="button" value="=" onclick="calculate()" style="font-size: medium; font-weight: bold;"/> </td>
         </tr>
         
     </table>
